# intel-arc-pro-fan-control

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh
contrib/: KERNEL_CONTRIB_WORKFLOW.md  UPSTREAM_OC.md  contrib-885-comment.md  contrib-mailinglist-testedby.txt
dkms/: README.md  dkms-build.sh  dkms.conf
docs/: B70-G31-MULTI-GPU.md  COOLERCONTROL.md  DISTRIBUTION.md  EVIDENCE.md  GPU-TUNING.md  GUI.md  INSTALL.md  LINUX-BUILD.md  NOTES.md  OVERCLOCKING.md  PORT_NOTES.md
gui/: xe-gpu-gui.desktop  xe-gpu-gui.py
kernel/: xe_gt_oc.c  xe_gt_oc.h
kernel-hook/: zz-xe-fan-rebuild
patch/: 0001-drm-xe-add-vf-curve-overclocking-sysfs.patch  NOTICE.md  xe-fan-control-168027-cachyos-7.1.2.patch
polkit/: 49-xe-gpu.rules
scripts/: apply_xefan.sh  apply_xeoc.sh  build-xe-module.sh  setup-git-sendemail.sh  setup-llm-benchmark.sh  xe-b70-rebar-kexec.sh  xe-fan-curve.sh  xe-fan-rebuild.sh  xe-gpu-oc.sh  xe-gpu-stress.sh  xe-gpu-temps.sh  xe-gpu-tune.sh  xe-gpu-vramd.sh  xe-gpu.sh
systemd/: xe-b70-rebar.service  xe-fan-curve.service  xe-gpu-oc-confirm.service  xe-gpu-oc.service  xe-gpu-tune.service  xe-gpu-vram.service
systemd/etc/: xe-fan-curve.conf  xe-gpu-oc.conf  xe-gpu-tune.conf
windows/: .gitignore  CMakeLists.txt  PORT.md  README.md  install.ps1  oc-session.ps1  uninstall.ps1
windows/installer/: README.md  arc-gpu-control.iss  build-installer.ps1
windows/src/: apply.cpp  apply.hpp  arc.cpp  arc.hpp  config.cpp  config.hpp  fan_curve.cpp  fan_curve.hpp  igcl.cpp  igcl.hpp
windows/src/cli/: main.cpp
windows/src/gui/: main.cpp  resource.rc
windows/src/service/: service_main.cpp
